<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/football"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/linearLWidth"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                    >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/slovakiaText"
                    style="@style/textView"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/slovakiaScore"
                    android:textSize="@dimen/slovakiaScoreTextSize"
                    style="@style/scoreText"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goalSlovakia"
                    android:text="@string/goalSlovakia"
                    style="@style/goal"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="directKickSlovakia"
                    android:text="@string/kickSlovakia"
                    style="@style/kick"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="penaltySlovakia"
                    android:text="@string/penaltySlovakia"
                    style="@style/penalty"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="foulsSlovakia"
                    android:text="@string/fouls"
                    android:textStyle="bold"
                    style="@style/foulsButton"/>

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/foulsSlovakia"
                    style="@style/foulsScore"/>


            </LinearLayout>

            <View
                android:layout_height="match_parent"
                style="@style/view"/>

            <LinearLayout
                android:layout_width="@dimen/linearLWidth2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/italyScore"
                    style="@style/textView"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/teamScore"
                    style="@style/scoreText" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="goalItaly"
                    android:text="@string/goalItaly"
                    style="@style/goal"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="directKickItaly"
                    android:text="@string/directKickItaly"
                    style="@style/kick"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/penaltyItalyMarginBottom"
                    android:layout_marginLeft="@dimen/marginLeft"
                    android:layout_marginRight="@dimen/marginRight"
                    android:onClick="PenaltyItaly"
                    android:text="@string/penalty"
                    style="@style/penalty"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="foulsItaly"
                    android:text="@string/fouls"
                    android:textStyle="bold"
                    style="@style/foulsButton"/>

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/foulsScore"
                    android:text="@string/scoreItalyText"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="resetScore"
            android:text="@string/reset"
            style="@style/reset"/>
    </RelativeLayout>
</ScrollView>






















